fixer des bugs d'afficage. ajout du calcule  du prix d'une course

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <dc-header *ngIf="connected"></dc-header>
-
+<!-- <dc-back *ngIf="connected"></dc-back> -->
 <div class="container">
     <notification></notification>
     <router-outlet></router-outlet>
