--- a/src/app/modules/admin/user/user-list/user-list.component.sass
+++ b/src/app/modules/admin/user/user-list/user-list.component.sass
@@ -3,6 +3,7 @@
 .mat-table
     @extend .table
     @extend .table-striped
+    @extend .table-hover
 
 .mat-elevation-z8 
    background-color: #bac8d4
