--- a/src/app/modules/driver-calendar/components/calendar/calendar.component.html
+++ b/src/app/modules/driver-calendar/components/calendar/calendar.component.html
@@ -78,6 +78,6 @@
   </div>
 </div>
 
-<div class="row">
+<div *ngIf="isAdmin" class="row">
     <button type="submit" class="btn button-float-right" (click)="createNewRide()" placement="left" ><i class="fas fa-plus"></i></button>
 </div>
