--- a/src/app/modules/driver-calendar/components/calendar/calendar.component.sass
+++ b/src/app/modules/driver-calendar/components/calendar/calendar.component.sass
@@ -13,8 +13,8 @@ pre
 
 .dc-container-calendar
   background-color: white
-.cal-event-costum
-  width: 400% !important
+
 .btn 
   &.button-float-right
-    width: 2em
+    display: block
+    background: #64696d !important
