--- a/src/app/core/login/login.component.html
+++ b/src/app/core/login/login.component.html
@@ -38,7 +38,7 @@
 
         </div>
 
-        <button type="submit" id='login' class="btn btn-primary"><i class="fas fa-sign-in-alt"></i></button>
+        <button [disabled]="loginForm.invalid"  type="submit" id='login' class="btn btn-dark float-right"><i class="fas fa-sign-in-alt"></i></button>
 
       </form>
     </div>
