--- a/src/app/modules/driver-calendar/components/calendar-header/calendar-header.component.html
+++ b/src/app/modules/driver-calendar/components/calendar-header/calendar-header.component.html
@@ -2,52 +2,52 @@
   <div class="col-md-4">
     <div class="btn-group">
       <div
-        class="btn btn-primary"
+        class="btn btn-dark"
         mwlCalendarPreviousView
         [view]="view"
         [(viewDate)]="viewDate"
         (viewDateChange)="viewDateChange.next(viewDate)">
-        Previous
+        Précédent
       </div>
       <div
-        class="btn btn-outline-secondary"
+        class="btn btn-outline-success"
         mwlCalendarToday
         [(viewDate)]="viewDate"
         (viewDateChange)="viewDateChange.next(viewDate)">
-        Today
+        Aujourd'hui
       </div>
       <div
-        class="btn btn-primary"
+        class="btn btn-dark"
         mwlCalendarNextView
         [view]="view"
         [(viewDate)]="viewDate"
         (viewDateChange)="viewDateChange.next(viewDate)">
-        Next
+        Suivant
       </div>
     </div>
   </div>
-  <div class="col-md-4">
+  <div class="col-md-4 text-white">
     <h3>{{ viewDate | calendarDate:(view + 'ViewTitle'):locale }}</h3>
   </div>
   <div class="col-md-4">
     <div class="btn-group">
       <div
-        class="btn btn-primary"
+        class="btn btn-dark"
         (click)="viewChange.emit('month')"
         [class.active]="view === 'month'">
-        Month
+        Mois
       </div>
       <div
-        class="btn btn-primary"
+        class="btn btn-dark"
         (click)="viewChange.emit('week')"
         [class.active]="view === 'week'">
-        Week
+        Semaine
       </div>
       <div
-        class="btn btn-primary"
+        class="btn btn-dark"
         (click)="viewChange.emit('day')"
         [class.active]="view === 'day'">
-        Day
+        Jour
       </div>
     </div>
   </div>
