--- a/src/app/modules/driver-calendar/components/ride-detail/ride-detail.component.html
+++ b/src/app/modules/driver-calendar/components/ride-detail/ride-detail.component.html
@@ -4,53 +4,73 @@
       <div class="form-row">
         <div class="form-group col-md-6">
           <input type="text" class="form-control" formControlName="departureAdress" id="ID_INPUT_DEPART_ADRESS"
-            [ngbTypeahead]="search" [resultFormatter]="formatter" placeholder="Depart Address"
-            [inputFormatter]="formatter" required />
+            [ngbTypeahead]="search" [resultFormatter]="formatter" placeholder="Point de depart" [inputFormatter]="formatter"
+            required />
         </div>
         <div class="form-group col-md-6">
           <input type="text" class="form-control" formControlName="arrivalAddress" id="ID_INPUT_ARRIVAL_ADRESS"
-            [ngbTypeahead]="search" [resultFormatter]="formatter" placeholder="Arrival address"
-            [inputFormatter]="formatter" required />
+            [ngbTypeahead]="search" [resultFormatter]="formatter" placeholder="Distination" [inputFormatter]="formatter"
+            required />
         </div>
         <div class="form-group col-md-6">
           <input type="text" class="form-control" formControlName="customer" id="ID_INPUT_CUSTOMER" [ngbTypeahead]="searchUser"
-            [resultFormatter]="formatterUser" placeholder="search Costomer by Last Name  Or by phone number ou by secity number or email "
+            [resultFormatter]="formatterUser" placeholder="chercher un client par  ( Non, téléphone mobile, email, N° sécurité social )  "
             [inputFormatter]="formatterUser" required />
         </div>
         <div class="form-group col-md-6">
           <input type="text" class="form-control" formControlName="driver" id="ID_INPUT_DRIVER" [ngbTypeahead]="searchUser"
-            [resultFormatter]="formatterUser" placeholder="search Costomer by Last Name  Or by phone number ou by secity number or email "
-            [inputFormatter]="formatterUser" />
+            [resultFormatter]="formatterUser" placeholder="chercher un chauffeur par son nom )" [inputFormatter]="formatterUser" />
         </div>
         <div class="form-group col-md-6">
-          <input type="datetime-local" class="form-control" formControlName="departureDate" id="ID_INPUT_DEART_DATE" placeholder="Depart date"
-            required>
+          <input type="datetime-local" class="form-control" formControlName="departureDate" id="ID_INPUT_DEART_DATE"
+            placeholder="Date de départ" required>
         </div>
         <div class="form-group">
           <ng-select [items]="typeRide$ | async" bindLabel="label" appendTo="body" labelForId="ID_RIDE_TYPE"
-            placeholder="Select the type of the ride" clearAllText="Clear" formControlName="rideType">
+            placeholder="Type de course" clearAllText="Clear" formControlName="rideType">
           </ng-select>
         </div>
       </div>
       <div class="form-group">
-        <textarea class="form-control" id="TEXT_AREA_COMMENTAIRE" rows="3" formControlName="comment" placeholder="comment"></textarea>
+        <textarea class="form-control" id="TEXT_AREA_COMMENTAIRE" rows="3" formControlName="comment" placeholder="Commentaire (note)"></textarea>
       </div>
 
-      <button type="submit" class="btn btn-primary" (click)="calculer(form)">
-        calculer
-      </button>
 
-      <div *ngIf="estimationRide" class="row">
-        <div class="col-4">
-          <p>distance: {{estimationRide.distance.text}}</p>
+      <div>
+        
+        <div class="row align-items-center m-2">
+          <div class="col-3 align-self-center">
+              <button type="submit" class="btn btn-dark" (click)="calculer()">
+                  <i class="fas fa-calculator mr-2"></i> Estimer 
+              </button>
+          </div>
+          
         </div>
-        <div class="col-4">
-          <p>duration: {{estimationRide.duration.text}}</p>
+        
+        <div *ngIf=" !showLoadingEstimation && form && form.value && form.value.estimate && showEstimation else loading" class="form-row" disabled>
+          <div class="form-group col-md-4">
+            <span type="text" class="form-control" id="idTemps"> <i class="far fa-clock mr-2"></i> {{form.value.estimate.duration?.text}} </span>
+          </div>
+          <div class="form-group col-md-4">
+            <span class="form-control" id="idDistance"> <i class="far fa-paper-plane mr-2"></i> {{form.value.estimate.distance?.text}} </span>
+          </div>
+          <div class="form-group col-md-4">
+            <span class="form-control" id="idPrice"> <i class="fas fa-euro-sign mr-2"></i>{{form.value.estimate.price?.text}} </span>
+          </div>
         </div>
       </div>
 
-      <button type="submit" class="btn btn-primary" [disabled]="form.invalid" (click)="submit()"> Save Ride </button>
+
+
+      <button type="submit" class="btn btn-dark float-right" [disabled]="form.invalid" (click)="submit()"><i class="far fa-save mr-2"></i> Enregister</button>
 
     </form>
   </div>
 </div>
+
+<ng-template #loading>
+    <div class="text-center">
+      <i class="fa fa-spin fa-spinner fa-5x"></i>
+      <br> Loading events...
+    </div>
+</ng-template>
