--- a/src/app/modules/admin/user/user-list/user-list.component.sass
+++ b/src/app/modules/admin/user/user-list/user-list.component.sass
@@ -13,3 +13,9 @@ table
 th 
     border-bottom-color: red
     border-bottom-widt: 3px
+
+.button-float-right
+    background: #64696d !important
+    padding: 0
+    margin: 0
+
